docs filled with getting started and tutorials

--- a/docs/tutorials/Query_and_download_hls_datasets_with_nasa_hls.ipynb
+++ b/docs/tutorials/Query_and_download_hls_datasets_with_nasa_hls.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Query and download HLS datasets with *nasa_hls*\n",
+    "## Query and download HLS datasets with *nasa_hls*\n",
     "\n",
     "This guide shows how the *nasa_hls* package can be used to query and download datasets from NASA's Harmonized Landsat and Sentinel-2 Project (https://hls.gsfc.nasa.gov/) datasets."
    ]
@@ -25,9 +25,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Query\n",
+    "### Query\n",
     "\n",
-    "### Available tiles\n",
+    "#### Available tiles\n",
     "\n",
     "Get a list of available tiles (see https://hls.gsfc.nasa.gov/test-sites/ for a map representation).\n",
     "It will be downloaded from https://hls.gsfc.nasa.gov/wp-content/uploads/2018/10/HLS_Sentinel2_Granule.csv."
@@ -49,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Available datasets\n",
+    "#### Available datasets\n",
     "\n",
     "Get a available datasets matching the user-given \n",
     "\n",
@@ -355,9 +355,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Download \n",
+    "### Download \n",
     "\n",
-    "### Download a single dataset"
+    "#### Download a single dataset"
    ]
   },
   {
@@ -455,7 +455,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Download a batch of datasets\n",
+    "#### Download a batch of datasets\n",
     "\n",
     "Given a dataframe as the one returned by ``dataframe_from_urls`` it is possible to download a batch of datasets.\n",
     "That means we can filter the the data and download what we need.\n",
