--- a/docs/tutorials/Working_with_HLS_datasets_and_nasa_hls.ipynb
+++ b/docs/tutorials/Working_with_HLS_datasets_and_nasa_hls.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Working with HLS datasets: cloud cover, GeoTIFFs, and the QA band\n",
+    "## Working with HLS datasets: cloud cover, GeoTIFFs, and the QA band\n",
     "\n",
     "This guide shows how to use some of the utilities implemented in *nasa_hls* for working with NASA's Harmonized Landsat and Sentinel-2 Project (https://hls.gsfc.nasa.gov/) data.\n",
     "It covers the follwoing topics:\n",
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The sample data \n",
+    "### The sample data \n",
     "\n",
     "We assume the data that has been created wiht the 'Query and download HLS datasets with *nasa_hls*' guide."
    ]
@@ -247,7 +247,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Derive metadata from HDF file \n",
+    "### Derive metadata from HDF file \n",
     "\n",
     "The HDF files come with rich metadata that can be read from the files with ``gdalinfo``.\n",
     "The [HLS v1.4 UserGuide](https://hls.gsfc.nasa.gov/wp-content/uploads/2019/01/HLS.v1.4.UserGuide_draft_ver3.1.pdf) lists the metadata fields with a short description in Section 6.6.\n",
@@ -594,9 +594,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Convert HDF to single-layer GeoTIFFs\n",
+    "### Convert HDF to single-layer GeoTIFFs\n",
     "\n",
-    "### Single scene"
+    "#### Single scene"
    ]
   },
   {
@@ -686,7 +686,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Batch of scene"
+    "#### Batch of scene"
    ]
   },
   {
@@ -724,7 +724,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create a clear-sky mask from the QA layer\n",
+    "### Create a clear-sky mask from the QA layer\n",
     "\n",
     "The [HLS v1.4 UserGuide](https://hls.gsfc.nasa.gov/wp-content/uploads/2019/01/HLS.v1.4.UserGuide_draft_ver3.1.pdf) helps to understanding and use the QA layer.\n",
     "\n",
@@ -737,7 +737,7 @@
     "\n",
     "The rest of this section shows how to create the default mask and custom masks from the bit encoded AQ layer.  \n",
     "\n",
-    "### Sample QA layer\n",
+    "#### Sample QA layer\n",
     "\n",
     "For illustration purposes we use the QA layer of the *HLS.L30.T32UNU.2018092.v1.4* scene.\n",
     "\n",
@@ -770,7 +770,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Understand the QA layer\n",
+    "#### Understand the QA layer\n",
     "\n",
     "The metadata also gives us a *QA description*. We also find that information in the [HLS v1.4 UserGuide](https://hls.gsfc.nasa.gov/wp-content/uploads/2019/01/HLS.v1.4.UserGuide_draft_ver3.1.pdf):\n",
     "\n",
@@ -788,7 +788,7 @@
     "\n",
     "*Suppose we get a decimal QA value 100, which translates into binary 01100100, indicating that the aerosol level is low (bits 6-7), it is water (bit 5), and adjacent to cloud (bit 2).*\n",
     "\n",
-    "### Derive clear-sky mask from the QA layer\n",
+    "#### Derive clear-sky mask from the QA layer\n",
     "\n",
     "The guide gives some advice on how to use the QA layer:\n",
     "\n",
@@ -1180,7 +1180,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Find masking rules resulting in metadata cloud cover\n",
+    "##### Find masking rules resulting in metadata cloud cover\n",
     "\n",
     "As an example let us see if we can calculate the cloud cover from the QA layer by finding the right QA attributes to be masked.\n",
     "\n",
@@ -1704,7 +1704,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Convert the QA layer into a mask  \n",
+    "##### Convert the QA layer into a mask  \n",
     "\n",
     "Given we know the QA values that we want to consider as valid or invalid pixels we can derive a mask array or GeoTIFF from a GeoTIFF QA layer.\n",
     "\n",
@@ -1811,7 +1811,7 @@
     "\n",
     "**Feel free to do so... (;**\n",
     "\n",
-    "#### Visualize the mask"
+    "##### Visualize the mask"
    ]
   },
   {
