minor tutorial changes

--- a/docs/tutorials/Query_and_download_hls_datasets_with_nasa_hls.ipynb
+++ b/docs/tutorials/Query_and_download_hls_datasets_with_nasa_hls.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,9 +35,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of tiles:  4090\n",
+      "First tiles:  ['01UDT', '01UET', '01UFT']\n",
+      "Last tiles:  ['56JMN', '56JMP', '56JMQ']\n"
+     ]
+    }
+   ],
    "source": [
     "available_tiles = nasa_hls.get_available_tiles_from_url()\n",
     "print(\"Total number of tiles: \", len(available_tiles))\n",
@@ -65,14 +75,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4/4 [00:06<00:00,  1.62s/it]"
+      "100%|██████████| 4/4 [00:04<00:00,  1.19s/it]"
      ]
     },
     {
@@ -110,14 +120,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4/4 [00:05<00:00,  1.30s/it]\n"
+      "100%|██████████| 4/4 [00:04<00:00,  1.17s/it]"
      ]
     },
     {
@@ -125,6 +135,13 @@
      "output_type": "stream",
      "text": [
       "Number of datasets:  373\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     },
     {
@@ -279,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +359,7 @@
        "2     L30  32UNU 2018-01-12  https://hls.gsfc.nasa.gov/data/v1.4/L30/2018/3..."
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +396,7 @@
        "'https://hls.gsfc.nasa.gov/data/v1.4/L30/2018/32/U/N/U/HLS.L30.T32UNU.2018092.v1.4.hdf'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +428,7 @@
        "0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +622,7 @@
        "163  https://hls.gsfc.nasa.gov/data/v1.4/S30/2018/3...  2018      4   25  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,14 +651,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 8/8 [15:28<00:00, 116.04s/it]\n"
+      "100%|██████████| 8/8 [07:48<00:00, 58.61s/it]\n"
      ]
     }
    ],
@@ -654,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -832,7 +849,7 @@
        "163  ./xxx_uncontrolled_hls/downloads/HLS.S30.T32UN...  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -846,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,7 +887,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
